wide idea view + spacing fixes

--- a/webapp/src/app/components/idea-card/idea-card.component.scss
+++ b/webapp/src/app/components/idea-card/idea-card.component.scss
@@ -28,7 +28,7 @@
 #bottom {
     width: 100%;
     gap: 10px;
-    padding-top: 20px;
+    padding-top: 16px;
     padding-bottom: 20px;
 
     #title {
